add background img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Sign Up Form</title>
   </head>
   <body>
+    <main>
+      <div class="main-container">
+        <div class="bg-image-container">
+          <img
+            src="./images/haliebg.jpg"
+            alt="background photo"
+            class="background-image"
+          />
+        </div>
+      </div>
+    </main>
     <script src="main.js" type="module"></script>
   </body>
 </html>
