--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
             alt="background photo"
             class="background-image"
           />
+          <div class="logo-container">
+            <img
+              src="./images/odin-lined.png"
+              alt="odin-logo"
+              class="odin-logo"
+            />
+            <p class="logo-text">ODIN</p>
+          </div>
+
+          <p class="photo-credit">
+            Photo by
+            <a
+              href="https://unsplash.com/@haliewestphoto?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Halie West</a
+            >
+            on
+            <a
+              href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+              >Unsplash</a
+            >
+          </p>
         </div>
       </div>
     </main>
