--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main>
       <div class="main-container">
+        <!-- Background image -->
         <div class="bg-image-container">
           <img
             src="./images/haliebg.jpg"
@@ -36,6 +37,70 @@
               >Unsplash</a
             >
           </p>
+        </div>
+        <div class="form-container">
+          <div class="form-elements">
+            <p class="header-text">
+              This is not a real online service! You know you need something
+              like this in your life to help you realize your deepest dreams.
+            </p>
+            <p class="header-text">Sign up <em>now</em> to get started.</p>
+            <br />
+            <p class="header-text">You <em>know</em> you want to.</p>
+            <br />
+
+            <form>
+              <p class="form-title">Let's Do this!</p>
+              <div class="field-container">
+                <div>
+                  <label for="firstName">First Name</label>
+                  <input type="text" id="firstName" name="firstName" />
+                </div>
+                <div>
+                  <label for="lastName">Last Name</label>
+                  <input type="text" id="lastName" name="lastName" />
+                </div>
+              </div>
+
+              <br />
+
+              <div class="field-container">
+                <div>
+                  <label for="email">Email</label>
+                  <input type="email" id="email" name="email" />
+                </div>
+                <div>
+                  <label for="phoneNumber">Phone Number</label>
+                  <input type="number" id="phoneNumber" name="phoneNumber" />
+                </div>
+              </div>
+
+              <br />
+
+              <div class="field-container">
+                <div>
+                  <label for="password">Password</label>
+                  <input type="password" id="password" name="password" />
+                </div>
+                <div>
+                  <label for="confirmPassword">Confirm Password</label>
+                  <input
+                    type="password"
+                    id="confirmPassword"
+                    name="confirmPassword"
+                  />
+                </div>
+              </div>
+            </form>
+
+            <br />
+            <div class="action-container">
+              <button class="create-acc-btn">Create Account</button>
+              <p>
+                Already have an account? <strong><a href="#">Log in</a></strong>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
