--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             <div class="action-container">
               <button class="create-acc-btn">Create Account</button>
               <p>
-                Already have an account? <strong><a href="#">Log in</a></strong>
+                Already have an account?
+                <a href="#" class="login-text">Log in</a>
               </p>
             </div>
           </div>
