add styles to inputs

--- a/index.html
+++ b/index.html
@@ -54,11 +54,23 @@
               <div class="field-container">
                 <div>
                   <label for="firstName">First Name</label>
-                  <input type="text" id="firstName" name="firstName" />
+                  <input
+                    type="text"
+                    id="firstName"
+                    name="firstName"
+                    required
+                    class="normal-field"
+                  />
                 </div>
                 <div>
                   <label for="lastName">Last Name</label>
-                  <input type="text" id="lastName" name="lastName" />
+                  <input
+                    type="text"
+                    id="lastName"
+                    name="lastName"
+                    required
+                    class="normal-field"
+                  />
                 </div>
               </div>
 
@@ -67,11 +79,23 @@
               <div class="field-container">
                 <div>
                   <label for="email">Email</label>
-                  <input type="email" id="email" name="email" />
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                    class="normal-field"
+                  />
                 </div>
                 <div>
                   <label for="phoneNumber">Phone Number</label>
-                  <input type="number" id="phoneNumber" name="phoneNumber" />
+                  <input
+                    type="number"
+                    id="phoneNumber"
+                    name="phoneNumber"
+                    required
+                    class="normal-field"
+                  />
                 </div>
               </div>
 
@@ -80,7 +104,12 @@
               <div class="field-container">
                 <div>
                   <label for="password">Password</label>
-                  <input type="password" id="password" name="password" />
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    required
+                  />
                 </div>
                 <div>
                   <label for="confirmPassword">Confirm Password</label>
@@ -88,6 +117,7 @@
                     type="password"
                     id="confirmPassword"
                     name="confirmPassword"
+                    required
                   />
                 </div>
               </div>
